--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://Nithishkumar2004.github.io/portfolio",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist",
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
